fixed the toggle placement and some spacing

--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ h1 {
 
 .container {
   margin: 100px auto;
-  /* max-width: 1000px; */
+  width: 1040px;
 }
 
 .app {
@@ -28,11 +28,11 @@ h1 {
 }
 
 .accordion {
-  width: 600px;
-  /* padding: 45px; */
+  width: 450px;
+  padding: 50px;
 }
 
-.accordion .container {
+.accordion .accordion-item {
   position: relative;
 }
 
@@ -40,6 +40,10 @@ h1 {
   position: relative;
   padding: 10px 0;
   cursor: pointer;
+}
+
+.accordion .label:hover {
+  color: hsl(14, 88%, 65%);
 }
 
 .accordion .label::before {
@@ -54,7 +58,6 @@ h1 {
   position: relative;
   height: 0;
   text-align: justify;
-  /* width: 400px; */
   overflow: hidden;
   transition: 0.5s;
 }
@@ -66,7 +69,7 @@ h1 {
 .accordion .accordion-item.active .label::before {
   content: url(/images/icon-arrow-down.svg);
   position: absolute;
-  top: 50%;
+  top: 20%;
   right: -5px;
   transform: translateY(-50%);
   transform: rotate(180deg);
